--- a/ft_server1/Dockerfile
+++ b/ft_server1/Dockerfile
@@ -1,10 +1,13 @@
 FROM debian:buster
 
+ARG INDEX
+
 COPY srcs/start.sh ./
 COPY srcs/nginx.conf /etc/nginx/sites-available/localhost
 COPY srcs/config.inc.php /var
 COPY srcs/wp-config.php /var
 
+ENV autoindex $INDEX
 RUN apt-get -y update
 RUN apt-get -y upgrade
 RUN apt-get -y install nginx
